system_dashboard/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-dashboard-deployment
  labels:
    app: system-dashboard
  namespace: smart-city-traffic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: system-dashboard
  template:
    metadata:
      labels:
        app: system-dashboard
    spec:
      containers:
        - name: system-dashboard
          # image pushed to ECR in AWS
          image: 319282596033.dkr.ecr.us-east-1.amazonaws.com/smart_city_traffic/system_dashboard:0.0.1
          imagePullPolicy: Always
