system_dashboard/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: system-dashboard-service
  namespace: smart-city-traffic
spec:
  selector:
    app: system-dashboard
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
