system_dashboard/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-dashboard-ingress-controller
  namespace: smart-city-traffic
  annotations:
    kubernetes.io/ingress.class: kong
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/v1/dashboard(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: system-dashboard-service
                port:
                  number: 8080
          - path: /api/v1/airdata(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: system-dashboard-service
                port:
                  number: 8080
